--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,10 +20,17 @@ jobs:
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps
     - name: Run Playwright tests
-      run: yarn playwright test
+      run: yarn run test
+      env:
+        USERNAME: ${{ secrets.USERNAME }}
+        PASSWORD: ${{ secrets.PASSWORD }}
+    - name: Generate Allure Report
+      run: yarn run allure:report
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+        path: |
+          playwright-report/
+          allure-report/
+        retention-days: 15
